--- a/notebooks/0.setup.ipynb
+++ b/notebooks/0.setup.ipynb
@@ -5,45 +5,6 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "a54ecda8-e45f-459b-b3a9-323e9f02e18f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "DROP TABLE IF EXISTS bundle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "941e024f-610a-40db-8995-635ecafc6c8c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "DROP TABLE IF EXISTS fhir_patient;\n",
-    "DROP TABLE IF EXISTS fhir_observation;\n",
-    "DROP TABLE IF EXISTS fhir_medicationrequest;\n",
-    "DROP TABLE IF EXISTS fhir_condition;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -57,10 +18,44 @@
    },
    "outputs": [],
    "source": [
-    "-- metadata table\n",
-    "CREATE TABLE IF NOT EXISTS processing_offset (\n",
-    "    table_name STRING, last_processed_ts TIMESTAMP\n",
-    ")"
+    "CREATE CATALOG IF NOT EXISTS synthea;\n",
+    "USE CATALOG synthea;\n",
+    "\n",
+    "CREATE SCHEMA IF NOT EXISTS raw;\n",
+    "CREATE SCHEMA IF NOT EXISTS fhir;\n",
+    "CREATE SCHEMA IF NOT EXISTS omop;\n",
+    "CREATE SCHEMA IF NOT EXISTS analytics;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "941e024f-610a-40db-8995-635ecafc6c8c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--DROP TABLE IF EXISTS synthea.raw.fhir_bundle;\n",
+    "--DROP TABLE IF EXISTS synthea.fhir.patient;\n",
+    "--DROP TABLE IF EXISTS synthea.fhir.observation;\n",
+    "--DROP TABLE IF EXISTS synthea.fhir.medicationrequest;\n",
+    "--DROP TABLE IF EXISTS synthea.fhir.condition;\n",
+    "--DROP TABLE IF EXISTS synthea.omop.condition_occurrence;\n",
+    "--DROP TABLE IF EXISTS synthea.omop.drug_exposure;\n",
+    "--DROP TABLE IF EXISTS synthea.omop.measurement;\n",
+    "--DROP TABLE IF EXISTS synthea.omop.person;\n",
+    "--DROP TABLE IF EXISTS synthea.analytics.cohort;\n",
+    "--DROP TABLE IF EXISTS synthea.analytics.survey_result;\n"
    ]
   }
  ],
@@ -83,7 +78,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "setup",
+   "notebookName": "0.setup",
    "widgets": {}
   },
   "language_info": {
