--- a/notebooks/3.fhir_to_omop.ipynb
+++ b/notebooks/3.fhir_to_omop.ipynb
@@ -23,10 +23,10 @@
     "\n",
     "spark = SparkSession.builder.getOrCreate()\n",
     "\n",
-    "patient_df = spark.read.format(\"delta\").table(\"fhir_patient\")\n",
-    "meds_df = spark.read.format(\"delta\").table(\"fhir_medicationrequest\")\n",
-    "cond_df = spark.read.format(\"delta\").table(\"fhir_condition\")\n",
-    "obs_df = spark.read.format(\"delta\").table(\"fhir_observation\")"
+    "patient_df = spark.read.format(\"delta\").table(\"synthea.fhir.patient\")\n",
+    "meds_df = spark.read.format(\"delta\").table(\"synthea.fhir.medicationrequest\")\n",
+    "cond_df = spark.read.format(\"delta\").table(\"synthea.fhir.condition\")\n",
+    "obs_df = spark.read.format(\"delta\").table(\"synthea.fhir.observation\")"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "    lit(0).alias(\"gender_concept_id\")  # Map FHIR `gender` to OMOP concept_id via lookup if available\n",
     ")\n",
     "\n",
-    "person.write.mode(\"append\").format(\"delta\").saveAsTable(\"person\")"
+    "person.write.mode(\"append\").format(\"delta\").saveAsTable(\"synthea.omop.person\")"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "        col(\"medicationCodeableConcept.coding\")[0].code.alias(\"drug_concept_id\")\n",
     "    )\n",
     "    \n",
-    "drug_exposure.write.mode(\"append\").format(\"delta\").saveAsTable(\"drug_exposure\")"
+    "drug_exposure.write.mode(\"append\").format(\"delta\").saveAsTable(\"synthea.omop.drug_exposure\")"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "        to_date(\"onsetDateTime\").alias(\"condition_start_date\"),\n",
     "        lit(\"414916001\").alias(\"condition_concept_id\")\n",
     "    )\n",
-    "condition_occurrence.write.mode(\"append\").format(\"delta\").saveAsTable(\"condition_occurrence\")"
+    "condition_occurrence.write.mode(\"append\").format(\"delta\").saveAsTable(\"synthea.omop.condition_occurrence\")"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "        col(\"valueQuantity.value\").alias(\"value_as_number\"),\n",
     "        lit(\"3038553\").alias(\"measurement_concept_id\")  # BMI\n",
     "    )\n",
-    "measurement.write.mode(\"append\").format(\"delta\").saveAsTable(\"measurement\")"
+    "measurement.write.mode(\"append\").format(\"delta\").saveAsTable(\"synthea.omop.measurement\")"
    ]
   }
  ],
@@ -159,7 +159,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "fhir_to_omop",
+   "notebookName": "3.fhir_to_omop",
    "widgets": {}
   },
   "language_info": {
